Fix logos on tablet; add Analytics

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2985,6 +2985,10 @@ body:not(.homepage) #main {
 	border-bottom: 0;
 }
 
+.logos__logo img {
+  max-width: 100%;
+}
+
 .header-phone {
 	position: absolute;
 	display: inline-block;
